# Secure_MCP_Server

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  identity.example.json  pyproject.toml
deploy/: admin-env-load.sh.example  secure-mcp-admin.service  secure-mcp.service  secure-mcp@.service  vault-env-load.sh.example
deploy/polkit/: 49-secure-mcp-restart.rules
docs/: ADMIN.md  CONSOLE.md  EDGE-INTEGRATION.md  SETUP.md
src/secure_mcp/: audit.py  audit_verify.py  auth.py  circuit_breaker.py  config.py  context.py  dlp.py  http_client.py  logger.py  policy_store.py  quota.py  rate_limit.py  scopes.py  server.py  validation.py
src/secure_mcp/adapters/: checkpoint_te.py  lakera_guard.py  threatcloud.py
src/secure_mcp/admin/: auth.py  config.py  restart.py  server.py  service.py  views.py
src/secure_mcp/edge/: auth.py  config.py  server.py  verdict.py
src/secure_mcp/tools/: ai_guard.py  anti_phishing.py  file_sandboxing.py  threat_emulation.py  threat_intel.py  url_category.py
tests/: test_admin_auth.py  test_admin_restart.py  test_admin_server.py  test_admin_service.py  test_audit.py  test_auth.py  test_checkpoint_te.py  test_circuit_breaker.py  test_dlp.py  test_edge_auth.py  test_edge_server.py  test_edge_verdict.py  test_http_client.py  test_lakera_guard.py  test_policy_store.py  test_quota.py  test_rate_limit.py  test_server_build.py  test_threatcloud.py  test_tools_integration.py  test_validation.py  test_validation_indicators.py
