[project]
name = "secure-mcp"
version = "0.2.0"
description = "Hardened MCP broker for Check Point Threat Emulation and Lakera Guard."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.8",
]

[project.scripts]
secure-mcp = "secure_mcp.server:main"
secure-mcp-admin = "secure_mcp.admin.server:main"
secure-mcp-edge = "secure_mcp.edge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secure_mcp"]
